--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="keywords" content="Nebim V3 danışmanlık, Nebim Üretim, Nebim SQL, Nebim etiket, Nebim e-Fatura">
 
   <meta name="description" content="Nebim V3 ERP & Üretim danışmanlığı: kurulum, eğitim, SQL raporlama, etiket/barkod, e-Fatura/e-İrsaliye süreçleri ve uzaktan destek." />
+  <meta name="robots" content="index, follow">
+<meta name="keywords" content="Nebim V3 danışmanlık, Nebim Üretim danışmanlığı, Nebim SQL, Nebim etiket, Nebim e-Fatura, Nebim destek Türkiye">
+
   <meta name="theme-color" content="#0b1220" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -37,11 +40,13 @@
       <div class="container hero-grid">
         <div>
           <p class="badge">Nebim V3 ERP • Nebim Üretim • SQL Raporlama</p>
-          <h1>Nebim V3 ERP danışmanlığıyla süreçlerinizi hızlandırın.</h1>
-          <p class="muted">
-            Kurulum/parametre, kullanıcı eğitimleri, üretim (reçete–iş emri–maliyet),
-            etiket/barkod tasarımları, e-Fatura/e-İrsaliye akışları ve SQL tabanlı raporlar.
-          </p>
+         <h1>Nebim V3 ve Nebim Üretim Danışmanlığı</h1>
+
+<p>
+Türkiye genelinde Nebim V3 ve Nebim Üretim süreçleriniz için uzaktan profesyonel destek.
+SQL raporlama, etiket tasarımı, e-Fatura/e-İrsaliye çözümleri ve hızlı sorun giderme hizmeti sunulmaktadır.
+</p>
+
           <div class="cta">
             <a class="btn btn-primary" href="#iletisim">Ücretsiz Ön Görüşme</a>
             <a class="btn btn-ghost" href="https://wa.me/905445640167" target="_blank" rel="noreferrer">WhatsApp</a>
@@ -257,5 +262,6 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
