--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ SQL raporlama, etiket tasarımı, e-Fatura/e-İrsaliye çözümleri ve hızlı s
               <h3>E-posta</h3><p class="muted">erpmrpdanismanlik@gmail.com</p>
             </a>
           </div>
-          <p class="small muted">* </p>
+          <p class="small muted"> </p>
         </div>
 
         <div class="card">
@@ -264,6 +264,7 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
