Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -259,10 +259,16 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
       </div>
     </div>
   </footer>
-
+<a href="https://wa.me/905445640167" 
+   class="whatsapp-float" 
+   target="_blank" 
+   rel="noreferrer">
+   💬
+</a>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
