--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
         <a href="#sss">SSS</a>
         <a class="btn btn-light" href="#iletisim">İletişim</a>
       </nav>
-    </div>
-      <a href="#hizmetler" onclick="toggleMenu()">Hizmetler</a>
-      <a href="#surec" onclick="toggleMenu()">Süreç</a>
-      <a href="#ornekler" onclick="toggleMenu()">Örnek Çalışmalar</a>
-      <a href="#sss" onclick="toggleMenu()">SSS</a>
-      <a href="#iletisim" onclick="toggleMenu()">İletişim</a>
-    </div>
+   <header class="header">
+  <div class="container nav">
+    <a class="brand" href="#top">NebimV3 Danışmanlık</a>
+    <nav class="menu">
+      <a href="#hizmetler">Hizmetler</a>
+      <a href="#surec">Süreç</a>
+      <a href="#ornekler">Örnek Çalışmalar</a>
+      <a href="#sss">SSS</a>
+      <a class="btn btn-light" href="#iletisim">İletişim</a>
+    </nav>
+  </div>
+</header>
+
   </header>
 
   <main id="top">
@@ -267,6 +273,7 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
