--- a/index.html
+++ b/index.html
@@ -253,6 +253,30 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
       </div>
     </div>
   </footer>
+  </footer>
+
+<section>
+<h2>Bilgi Merkezi</h2>
+<ul>
+<li><a href="/blog/nebim-efatura-gonderilemiyor.html">Nebim e-Fatura Gönderilemiyor Hatası</a></li>
+<li><a href="/blog/nebim-sql-ornekleri.html">Nebim SQL Rapor Örnekleri</a></li>
+<li><a href="/blog/nebim-uretim-maliyet.html">Nebim Üretim Maliyet Hesaplama</a></li>
+<li><a href="/blog/nebim-etiket-ornekleri.html">Nebim Etiket Tasarım Örnekleri</a></li>
+<li><a href="/blog/nebim-hata-cozumleri.html">Nebim Hata Çözümleri</a></li>
+</ul>
+</section>
+
+<a href="https://wa.me/905445640167" 
+   class="whatsapp-float" 
+   target="_blank" 
+   rel="noreferrer">
+   💬
+</a>
+
+<script src="script.js"></script>
+</body>
+</html>
+
 <a href="https://wa.me/905445640167" 
    class="whatsapp-float" 
    target="_blank" 
@@ -262,6 +286,7 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
