--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="tr">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nebim V3 ERP Danışmanlığı | Enes Işıtan</title>
-  <meta name="keywords" content="Nebim V3 danışmanlık, Nebim Üretim, Nebim SQL, Nebim etiket, Nebim e-Fatura">
 
-  <meta name="description" content="Nebim V3 ERP & Üretim danışmanlığı: kurulum, eğitim, SQL raporlama, etiket/barkod, e-Fatura/e-İrsaliye süreçleri ve uzaktan destek." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Nebim V3 ERP Danışmanlığı | Enes Işıtan</title>
+
+  <meta name="description" content="Nebim V3 ERP & Üretim danışmanlığı: kurulum, eğitim, SQL raporlama, etiket/barkod, e-Fatura/e-İrsaliye süreçleri ve uzaktan destek.">
+  
+  <meta name="keywords" content="Nebim V3 danışmanlık, Nebim Üretim danışmanlığı, Nebim SQL, Nebim etiket, Nebim e-Fatura, Nebim destek Türkiye">
+
   <meta name="robots" content="index, follow">
-<meta name="keywords" content="Nebim V3 danışmanlık, Nebim Üretim danışmanlığı, Nebim SQL, Nebim etiket, Nebim e-Fatura, Nebim destek Türkiye">
 
   <meta name="theme-color" content="#0b1220" />
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/png" href="favicon.png">
 
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body>
   <header class="header">
     <div class="container nav">
@@ -331,6 +335,7 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
