Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -136,8 +136,18 @@ SQL raporlama, etiket tasarımı, e-Fatura/e-İrsaliye çözümleri ve hızlı s
           </article>
         </div>
       </div>
-    </section>
+    <section class="container">
+  <h2>Neden ERP & MRP Danışmanlık?</h2>
 
+  <ul class="muted">
+    <li>✔ Nebim V3 ve Nebim Üretim uzmanlığı</li>
+    <li>✔ Türkiye genelinde uzaktan hızlı destek</li>
+    <li>✔ SQL rapor ve performans optimizasyonu</li>
+    <li>✔ e-Fatura ve entegrasyon çözümleri</li>
+    <li>✔ Üretim ve maliyet süreçlerinde deneyim</li>
+    <li>✔ Aynı gün bağlantı ve hızlı çözüm</li>
+  </ul>
+</section>
     <section id="surec" class="section alt">
       <div class="container">
         <h2>Nasıl çalışıyoruz?</h2>
@@ -151,6 +161,16 @@ SQL raporlama, etiket tasarımı, e-Fatura/e-İrsaliye çözümleri ve hızlı s
     </p>
   </div>
 </div>
+<section class="container">
+<h2>Nebim Desteğe mi İhtiyacınız Var?</h2>
+
+<p>
+Nebim V3, SQL, e-Fatura veya üretim süreçlerinizde yaşadığınız sorunlar için hemen iletişime geçin.
+Aynı gün uzaktan bağlantı ile hızlı çözüm sağlanmaktadır.
+</p>
+
+<a href="https://wa.me/905445640167" class="btn">WhatsApp ile İletişim</a>
+</section>
 
 <div class="step">
   <span>2</span>
@@ -325,6 +345,7 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
