--- a/index.html
+++ b/index.html
@@ -270,6 +270,43 @@ Aynı gün uzaktan bağlantı ile hızlı çözüm sağlanmaktadır.
         </details>
       </div>
     </section>
+    <section class="container why-section">
+  <h2 class="section-title">Neden ERP & MRP Danışmanlık?</h2>
+
+  <div class="why-cards">
+
+    <div class="why-card">
+      <h4>Nebim Uzmanlığı</h4>
+      <p>Nebim V3 ve Nebim Üretim süreçlerinde deneyim.</p>
+    </div>
+
+    <div class="why-card">
+      <h4>Hızlı Uzaktan Destek</h4>
+      <p>Türkiye genelinde aynı gün bağlantı ile çözüm.</p>
+    </div>
+
+    <div class="why-card">
+      <h4>SQL & Performans</h4>
+      <p>Özel SQL rapor ve performans optimizasyonu.</p>
+    </div>
+
+    <div class="why-card">
+      <h4>e-Fatura Çözümleri</h4>
+      <p>e-Fatura ve entegrasyon süreçlerinde uzman destek.</p>
+    </div>
+
+    <div class="why-card">
+      <h4>Üretim & Maliyet</h4>
+      <p>Reçete ve maliyet süreçlerinin doğru yapılandırılması.</p>
+    </div>
+
+    <div class="why-card">
+      <h4>Sürekli Destek</h4>
+      <p>Canlı sonrası iyileştirme ve uzun vadeli Nebim desteği.</p>
+    </div>
+
+  </div>
+</section>
 
     <section id="iletisim" class="section">
       <div class="container contact">
@@ -345,6 +382,7 @@ Teşekkürler! Mesajınız gönderildi. En kısa sürede dönüş yapacağız.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
